# credco-memory-compiler

./: AGENTS.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-23-credco-kb-adaptation.md
docs/superpowers/specs/: 2026-06-23-credco-kb-adaptation-design.md
hooks/: pre-compact.py  session-end.py
scripts/: compile.py  config.py  flush.py  query.py  utils.py
tests/: test_agents_schema.py  test_compile_prompt.py  test_domain_filter.py  test_flush_prompt.py  test_query_cli.py
